[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-ambeo-soundbar"
version = "1.1.0"
description = "Home Assistant custom integration for Sennheiser AMBEO soundbars"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "faizpuru"}
]

[tool.ruff]
# Target Python 3.11+ (Home Assistant minimum)
target-version = "py311"

# Line length to match Home Assistant style
line-length = 88

# Exclude common directories
exclude = [
    ".git",
    ".github",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable recommended rules + additional checks
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]

# Ignore specific rules that conflict with Home Assistant patterns
ignore = [
    "E501",    # line too long (handled by formatter)
    "TRY003",  # avoid specifying messages outside exception class
    "TRY401",  # verbose logging - HA pattern for explicit error messages
    "TID252",  # relative imports - HA uses relative imports for custom components
    "EM101",   # exception must not use string literal
    "EM102",   # exception must not use f-string literal
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "ISC001",  # single line implicit string concatenation (conflicts with formatter)
    "N802",    # function name should be lowercase (HA uses async_* pattern)
    "N806",    # variable in function should be lowercase
    "ARG002",  # unused method argument - needed for interface compatibility
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore import violations in __init__.py
"__init__.py" = ["F401", "F403"]
# Test files can have additional freedoms
"tests/**/*.py" = ["ARG", "PLR2004"]

[tool.ruff.lint.isort]
# Use Home Assistant import style
force-sort-within-sections = true
known-first-party = ["custom_components.ambeo_soundbar"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
# Maximum complexity
max-complexity = 15

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.pylint]
# Pylint-specific settings
max-args = 10
max-branches = 15
max-returns = 6
max-statements = 50

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use line endings appropriate for the platform
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings
docstring-code-format = true

# Set the line length limit for docstring code examples
docstring-code-line-length = 72

[tool.bandit]
# Bandit security scanner configuration
exclude_dirs = [
    ".venv",
    "venv",
    "tests",
    ".git",
    ".github",
]

# Skip specific security checks that are false positives for Home Assistant
skips = [
    "B101",  # assert_used - OK in tests and type checking
    "B601",  # paramiko_calls - Not using paramiko
]

# Severity level
severity = "medium"

[tool.mypy]
# Type checking configuration
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Allow missing imports for third-party libraries
ignore_missing_imports = true

# Exclude directories
exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
# More lenient for API modules (external data)
module = "custom_components.ambeo_soundbar.api.*"
disallow_untyped_defs = false
check_untyped_defs = false
